--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 <div class="bottombutton">
                     <a href="https://discord.gg/RsBm7WEY7N" class="btn1">DISCORD</a>
-                    <a href="fivem://connect/cfx.re/join/b8kzy4" class="btn">Connect Server</a>
+                    <a href="fivem://connect/cfx.re/join/rb45ax" class="btn">Connect Server</a>
 
                     
                 </div>
